<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_timesheet_entry"
    android:background="#E0F7FA">

    <ImageView
        android:id="@+id/timeTrackerIcon"
        android:layout_width="119dp"
        android:layout_height="92dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_time_vision_logo_remove" />

    <ImageButton
        android:id="@+id/browseFilesButton"
        android:layout_width="361dp"
        android:layout_height="90dp"
        android:layout_below="@id/timeTrackerIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_add_image"
        android:text="@string/browse_files" />


    <TextView
        android:id="@+id/pictureUploadLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picture_upload"
        android:layout_below="@id/browseFilesButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"/>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/projectNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_project_name"
        android:layout_below="@id/browseFilesButton"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_date"
        android:layout_below="@id/projectNameInput"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/categoryInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_category"
        android:layout_below="@id/dateInput"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- Add start and end date fields here -->

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/startTimeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/categoryInput"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/pick_start_date" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/endTimeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pick_end_date"
        android:layout_below="@id/startTimeInput"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <LinearLayout
        android:id="@+id/timeFieldsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/endTimeInput"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/minimumDailyHoursInput"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/pick_start_time"
            android:inputType="time"
            android:focusable="false" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/maximumDailyHoursInput"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/pick_end_time"
            android:inputType="time"
            android:focusable="false" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/totalDuration"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/total_duration"
            android:textAlignment="center"
            android:gravity="center"/>

    </LinearLayout>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/workDescriptionInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="What are you working on?"
        android:layout_below="@id/timeFieldsLayout"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textMultiLine"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:layout_below="@id/workDescriptionInput"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"/>
</RelativeLayout>


